@@ -74,17 +74,6 @@ struct _GVolumeIface
   gboolean  (*mount_finish)   (GVolume             *volume,
                                GAsyncResult        *result,
                                GError             **error);
-
-  /*< private >*/
-  /* Padding for future expansion */
-  void (*_g_reserved1) (void);
-  void (*_g_reserved2) (void);
-  void (*_g_reserved3) (void);
-  void (*_g_reserved4) (void);
-  void (*_g_reserved5) (void);
-  void (*_g_reserved6) (void);
-  void (*_g_reserved7) (void);
-  void (*_g_reserved8) (void);
 };
 
 GType     g_volume_get_type       (void) G_GNUC_CONST;
